Fixed word wrap on desktop screen sizes

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -30,6 +30,8 @@
     .swearWord {
         font-size:12rem;
         letter-spacing: -0.4rem;
+        overflow: visible;
+        white-space: nowrap;;
     }
 }
 
